# UXAgent

./: README.md  persona_careful_researcher_lativ.txt  persona_cautious_verifier_nianjia.txt  persona_routine_buyer_nianjia.txt  personas.json  pyproject.toml  run_survey_latest.py
conf/: base.yaml  runConfig.yaml
docs/: LLM_ANALYZER_GUIDE.md  PARSER_DYNAMIC_ELEMENTS_FIX.md  UX_ANALYZER_GUIDE.md
experiment-ui/: index.html  package-lock.json  package.json  vite.config.ts
experiment-ui/src/: App.vue  main.ts  style.scss  types.ts
experiment-ui/src/components/: topProgressBar.vue
experiment-ui/src/composables/: useForm.ts  useProgress.ts
experiment-ui/src/steps/: personas.vue  reviewSubmit.vue  survey.vue
experiment-ui/src/utils/: weights.ts
scripts/: view_thoughts.py
src/: ux_analyzer.py  ux_analyzer_llm.py
src/simulated_web_agent/agent/: __init__.py  agent.py  context.py  gpt.py  memory.py
src/simulated_web_agent/agent/shop_prompts/: action.txt  feedback.txt  perceive.txt  planning.txt  reflect.txt  survey.txt  wonder.txt
src/simulated_web_agent/executor/: env.py
src/simulated_web_agent/executor/parser/: initscript.js  parser.js
src/simulated_web_agent/main/: __main__.py  app.py  experiment.py  model.py  persona.py  profiler.py  run.py  survey.py
